apps/homelab/jellyfleet/jellyseer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer
  namespace: jellyfleet
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - hosts:
        - jellyseer.homelab.rookian.dev
      secretName: tls-jellyseer-homelab
  rules:
    - host: jellyseer.homelab.rookian.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseer
                port:
                  name: web
